--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,91 +2,34 @@ name: Build Android APK
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v3
       
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.9'
+        python-version: '3.8'
         
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y \
-          build-essential \
-          git \
-          unzip \
-          openjdk-11-jdk \
-          autoconf \
-          automake \
-          libtool \
-          pkg-config \
-          zlib1g-dev \
-          libncurses5-dev \
-          libncursesw5-dev \
-          libtinfo5 \
-          cmake \
-          libffi-dev \
-          libssl-dev \
-          python3-pip \
-          python3-setuptools
-          
-    - name: Set up Java environment
-      run: |
-        echo "JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64" >> $GITHUB_ENV
-        echo "PATH=$PATH:/usr/lib/jvm/java-11-openjdk-amd64/bin" >> $GITHUB_ENV
-        
-    - name: Install Python dependencies
-      run: |
+        sudo apt-get install -y openjdk-8-jdk
         python -m pip install --upgrade pip
-        pip install buildozer cython
-        pip install kivy==2.1.0
+        pip install buildozer cython kivy
         
-    - name: Create simple icons if missing
+    - name: Build APK
       run: |
-        python -c "
-import os
-from PIL import Image, ImageDraw
-
-# Create icon if not exists
-if not os.path.exists('icon.png'):
-    img = Image.new('RGB', (512, 512), color='blue')
-    draw = ImageDraw.Draw(img)
-    draw.text((200, 250), 'APP', fill='white')
-    img.save('icon.png')
-    print('Created icon.png')
-
-# Create presplash if not exists  
-if not os.path.exists('presplash.png'):
-    img = Image.new('RGB', (800, 1280), color='lightblue')
-    img.save('presplash.png')
-    print('Created presplash.png')
-        " || echo "Icon creation failed, continuing..."
+        yes | buildozer android debug
         
-    - name: Build APK with Buildozer
-      run: |
-        buildozer android debug
-        
-    - name: List generated files
-      run: |
-        echo "Generated files:"
-        find . -name "*.apk" -type f
-        
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
       with:
-        name: phone-limiter-apk
-        path: |
-          bin/*.apk
-        if-no-files-found: warn
+        name: apk
+        path: bin/*.apk
